# openai-embeddings

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  codespell.txt  commitlint.config.js  package.json  pyproject.toml  release.config.js  requirements.txt  setup.py  setup_utils.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/merge-branch/: action.yml
.github/actions/tests/python/: action.yml
.github/workflows/: dependabotAutomerge.yml  precommitVersionBumps.yml  pullRequestController.yml  runTests.yml  semanticVersionBump.yml  tests.yml  testsPython.yml
models/: __version__.py  conf.py  const.py  exceptions.py  hybrid_search_retreiver.py  pinecone.py  prompt_templates.py  prueba.py  ssm.py  yt.py
models/examples/: certification_programs.py  load.py  load_data_from_dropbox.py  load_mysql.py  online_courses.py  pinecone_init.py  prompt.py  rag.py  training_services.py  training_services_oracle.py
models/tests/: test_base.py  test_configuration.py  test_examples.py  test_hsr.py  test_openai.py  test_pinecone.py  test_pinecone_lc.py  test_prompt_templates.py  test_prompts.py  test_ssm.py
models/tests/mock_data/: .env.test_01  .env.test_legal_nulls
requirements/: base.txt  local.txt
