[build-system]
requires = ["flake8", "gitlint", "bump2version"]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | node_modules
  | build
  | buck-out
  | build
  | dist
)/
'''

[tool.codespell]
skip = '*.svg,models/prompt_templates.py'
ignore-words = 'codespell.txt'
